Fixing CredentialManagerBrowserTests tests with the network service.

Making the CredentialManagerBrowserTests work with the network service.
They were failing because the certificate verifier was not set up for
the network service and an interstitial would be shown when navigating
to an HTTPS page.

Bug: 807739
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_mojo
Change-Id: I11500770f119c677b4a5b62f929b3e09dafd5047
Reviewed-on: https://chromium-review.googlesource.com/896869
Reviewed-by: John Abd-El-Malek <jam@chromium.org>
Commit-Queue: Jay Civelli <jcivelli@chromium.org>
Cr-Commit-Position: refs/heads/master@{#533778}
Former-commit-id: a256f1c9a3f7f6dc01dd00eeb213c3558664c728